--- a/src/components/checkbox/styles.scss
+++ b/src/components/checkbox/styles.scss
@@ -43,7 +43,7 @@
         justify-content: center;
         width: 14px;
         height: 14px;
-    
+        border-radius: var(--size-1);
         >svg{
             fill: transparent;
         }
